# time-converter

./: .gitignore  CMakeLists.txt  README.md
include/: industrial_time.h
src/: industrial_time.cpp  main.cpp
tests/: test_industrial_time.cpp
